packages/svelte/tests/compiler-errors/samples/snippet-ts-annotation-no-lang/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'js_parse_error',
		message: 'Unexpected token (did you forget to add `lang="ts"`?)',
		position: [18, 18]
	}
});
